[package]
name = "polyfit-rs"
version = "0.2.2"
authors = ["Stefano Di Martino"]
description = "Polynomial fitting of data like in numpy.polyfit()."
repository = "https://github.com/StefanoD/polyfit-rs"
edition = "2018"
keywords = ["algorithms", "mathematics", "science"]
license = "Apache-2.0"
readme = "README.md"

[lib]
test = true

[dependencies]
nalgebra = "0.34.1"

[dev-dependencies]
rand = "0.9.2"
